Fixed build script and renamed Test projects

--- a/Microsoft.Rest/ClientRuntime.Etw/Microsoft.Rest.ClientRuntime.Etw.nuspec
+++ b/Microsoft.Rest/ClientRuntime.Etw/Microsoft.Rest.ClientRuntime.Etw.nuspec
@@ -25,7 +25,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="Tracing.Etw\**\*.cs" target="src" />
+    <file src="ClientRuntime.Etw\**\*.cs" target="src" />
     <file src="..\binaries\net45\Microsoft.Rest.ClientRuntime.Etw.dll" target="lib\net45" />
     <file src="..\binaries\net45\Microsoft.Rest.ClientRuntime.Etw.pdb" target="lib\net45" />
     <file src="..\binaries\net45\Microsoft.Rest.ClientRuntime.Etw.xml" target="lib\net45" />
