--- a/Microsoft.Rest/ClientRuntime.Log4Net/Microsoft.Rest.ClientRuntime.Log4Net.nuspec
+++ b/Microsoft.Rest/ClientRuntime.Log4Net/Microsoft.Rest.ClientRuntime.Log4Net.nuspec
@@ -24,7 +24,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="Tracing.Log4Net\**\*.cs" target="src" />
+    <file src="ClientRuntime.Log4Net\**\*.cs" target="src" />
     <file src="..\binaries\net45\Microsoft.Rest.ClientRuntime.Log4Net.dll" target="lib\net45" />
     <file src="..\binaries\net45\Microsoft.Rest.ClientRuntime.Log4Net.pdb" target="lib\net45" />
     <file src="..\binaries\net45\Microsoft.Rest.ClientRuntime.Log4Net.xml" target="lib\net45" />
