Remove IDeserialization constraint from the HttpOperationException

--- a/Microsoft.Rest/ClientRuntime.Log4Net/ClientRuntime.Log4Net.csproj
+++ b/Microsoft.Rest/ClientRuntime.Log4Net/ClientRuntime.Log4Net.csproj
@@ -46,5 +46,6 @@
       <Link>CustomDictionary.xml</Link>
     </CodeAnalysisDictionary>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" Condition=" '$(LibraryFxTarget)' != 'portable' " />
+  <Import Project="$(CommonNugetPackageFolder)\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition=" '$(LibraryFxTarget)' != 'net45' " />
 </Project>
