--- a/Microsoft.Rest/ClientRuntime.Log4Net/Microsoft.Rest.ClientRuntime.Log4Net.nuspec
+++ b/Microsoft.Rest/ClientRuntime.Log4Net/Microsoft.Rest.ClientRuntime.Log4Net.nuspec
@@ -15,16 +15,23 @@
     <copyright>Copyright © Microsoft Corporation</copyright>
     <tags>Microsoft AutoRest ClientRuntime Log4Net</tags>
     <references>
+      <group targetFramework="net40">
+        <reference file="Microsoft.Rest.ClientRuntime.Log4Net.dll" />
+      </group>
       <group targetFramework="net45">
         <reference file="Microsoft.Rest.ClientRuntime.Log4Net.dll" />
       </group>
     </references>
     <dependencies>
       <dependency id="Microsoft.Rest.ClientRuntime" version="__VERSION_Microsoft.Rest.ClientRuntime__" />
+      <dependency id="log4net" version="2.0.3" />
     </dependencies>
   </metadata>
   <files>
     <file src="ClientRuntime.Log4Net\**\*.cs" target="src" />
+    <file src="..\binaries\net40\Microsoft.Rest.ClientRuntime.Log4Net.dll" target="lib\net40" />
+    <file src="..\binaries\net40\Microsoft.Rest.ClientRuntime.Log4Net.pdb" target="lib\net40" />
+    <file src="..\binaries\net40\Microsoft.Rest.ClientRuntime.Log4Net.xml" target="lib\net40" />
     <file src="..\binaries\net45\Microsoft.Rest.ClientRuntime.Log4Net.dll" target="lib\net45" />
     <file src="..\binaries\net45\Microsoft.Rest.ClientRuntime.Log4Net.pdb" target="lib\net45" />
     <file src="..\binaries\net45\Microsoft.Rest.ClientRuntime.Log4Net.xml" target="lib\net45" />
