--- a/Microsoft.Rest/ClientRuntime/ClientRuntime.csproj
+++ b/Microsoft.Rest/ClientRuntime/ClientRuntime.csproj
@@ -49,7 +49,7 @@
     <Compile Include="HttpOperationResponse.cs" />
     <Compile Include="ServiceClientCredentials.cs" />
     <Compile Include="RetryDelegatingHandler.cs" />
-    <Compile Include="PlatformTaskEx.cs" />
+    <Compile Include="PlatformTask.cs" />
     <Compile Include="ServiceClientTracing.cs" />
     <Compile Include="ServiceClient.cs" />
     <Compile Include="IServiceOperations.cs" />
@@ -66,7 +66,7 @@
     <Compile Include="TransientFaultHandling\ExponentialBackoffRetryStrategy.cs" />
     <Compile Include="TransientFaultHandling\FixedIntervalRetryStrategy.cs" />
     <Compile Include="TransientFaultHandling\Guard.cs" />
-    <Compile Include="TransientFaultHandling\HttpRequestExceptionWithStatus.cs" />
+    <Compile Include="TransientFaultHandling\HttpRequestWithStatusException.cs" />
     <Compile Include="TransientFaultHandling\Incremental.cs" />
     <Compile Include="TransientFaultHandling\ITransientErrorDetectionStrategy.cs" />
     <Compile Include="TransientFaultHandling\RetryingEventArgs.cs" />
