--- a/Microsoft.Rest/ClientRuntime.Tests/ClientRuntime.Tests.csproj
+++ b/Microsoft.Rest/ClientRuntime.Tests/ClientRuntime.Tests.csproj
@@ -31,6 +31,7 @@
     <Compile Include="Tracing\CloudTracingExtensionsTest.cs" />
     <Compile Include="TransientFaultHandling\DefaultHttpErrorDetectionStrategyTests.cs" />
     <Compile Include="TransientFaultHandling\GeneralRetryPolicyTests.cs" />
+    <Compile Include="TransientFaultHandling\RetryConditionTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
