--- a/tools/AutoRest.Build.Tasks/AutoRest.Build.Tasks.csproj
+++ b/tools/AutoRest.Build.Tasks/AutoRest.Build.Tasks.csproj
@@ -38,7 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegexReplacementTask.cs" />
+    <Compile Include="RegexReplaceTask.cs" />
     <Compile Include="StrongNameUtility.cs" />
     <Compile Include="ValidateStrongNameSignatureTask.cs" />
   </ItemGroup>
