--- a/Microsoft.Rest/ClientRuntime/ClientRuntime.csproj
+++ b/Microsoft.Rest/ClientRuntime/ClientRuntime.csproj
@@ -41,10 +41,9 @@
     <Compile Include="BasicAuthenticationCredentials.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="HttpExtensions.cs" />
-    <Compile Include="IDeserializationModel.cs" />
     <Compile Include="TransientFaultHandling\RetryCondition.cs" />
     <Compile Include="TypeConversion.cs" />
-    <Compile Include="ILazyCollectionInitialized.cs" />
+    <Compile Include="ILazyCollection.cs" />
     <Compile Include="LazyDictionary.cs" />
     <Compile Include="LazyList.cs" />
     <Compile Include="HttpOperationResponse.cs" />
