--- a/Microsoft.Rest/ClientRuntime.Log4Net/ClientRuntime.Log4Net.csproj
+++ b/Microsoft.Rest/ClientRuntime.Log4Net/ClientRuntime.Log4Net.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{2EFD6648-39B4-476A-B302-8BC236F5F1B8}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Microsoft.Rest.Common.Tracing.Log4Net</RootNamespace>
+    <RootNamespace>Microsoft.Rest.Tracing.Log4Net</RootNamespace>
     <AssemblyName>Microsoft.Rest.ClientRuntime.Log4Net</AssemblyName>
     <OutputType>Library</OutputType>
     <RestorePackages>true</RestorePackages>
