--- a/Microsoft.Rest/ClientRuntime/Microsoft.Rest.ClientRuntime.nuspec
+++ b/Microsoft.Rest/ClientRuntime/Microsoft.Rest.ClientRuntime.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata minClientVersion="2.5">
     <id>Microsoft.Rest.ClientRuntime</id>
-    <title>Client Runtime Library for Microsoft AutoRest Code Generator</title>
+    <title>Client Runtime Library for Microsoft AutoRest Generated Clients</title>
     <version>$version$</version>
     <authors>Microsoft</authors>
     <owners>azure-sdk, Microsoft</owners>
