--- a/Microsoft.Rest/ClientRuntime.Tests/ClientRuntime.Tests.csproj
+++ b/Microsoft.Rest/ClientRuntime.Tests/ClientRuntime.Tests.csproj
@@ -18,6 +18,9 @@
   </PropertyGroup>
   <Import Project="$(SolutionDir)\tools\AutoRest.Settings.targets" />
   <ItemGroup>
+    <Compile Include="Fakes\MirrorDelegatingHandler.cs" />
+    <Compile Include="Fakes\MirrorMessageHandler.cs" />
+    <Compile Include="Fakes\AppenderDelegatingHandler.cs" />
     <Compile Include="Fakes\AddHeaderResponseDelegatingHandler.cs" />
     <Compile Include="Fakes\BadResponseDelegatingHandler.cs" />
     <Compile Include="Fakes\FakeHttpHandler.cs" />
