--- a/ClientRuntime/CSharp/Microsoft.Rest.ClientRuntime.Tracing.Tests/ClientRuntime.Tracing.Tests.csproj
+++ b/ClientRuntime/CSharp/Microsoft.Rest.ClientRuntime.Tracing.Tests/ClientRuntime.Tracing.Tests.csproj
@@ -12,30 +12,30 @@
     <RootNamespace>Microsoft.Rest.ClientRuntime.Tracing.Tests</RootNamespace>
     <AssemblyName>Microsoft.Rest.ClientRuntime.Tracing.Tests</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
     <NuGetPackageImportStamp>92060766</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup>
     <_DiagnosticsTracingPackageName>Microsoft.Diagnostics.Tracing.TraceEvent.1.0.5</_DiagnosticsTracingPackageName>
-    <_DiagnosticsTracingTargets>..\..\packages\$(_DiagnosticsTracingPackageName)\tools\Microsoft.Diagnostics.Tracing.TraceEvent.targets</_DiagnosticsTracingTargets>
+    <_DiagnosticsTracingTargets>$(SolutionDir)packages\$(_DiagnosticsTracingPackageName)\tools\Microsoft.Diagnostics.Tracing.TraceEvent.targets</_DiagnosticsTracingTargets>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\tools\AutoRest.Settings.targets" />
   <ItemGroup>
     <Reference Include="Microsoft.Diagnostics.Tracing.TraceEvent, Version=1.0.11.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Microsoft.Diagnostics.Tracing.TraceEvent.1.0.11\lib\net40\Microsoft.Diagnostics.Tracing.TraceEvent.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\Microsoft.Diagnostics.Tracing.TraceEvent.1.0.11\lib\net40\Microsoft.Diagnostics.Tracing.TraceEvent.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Threading.Tasks, Version=1.0.12.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.dll</HintPath>
     </Reference>
     <Reference Include="xunit">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\xunit.1.9.2\lib\net20\xunit.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\xunit.1.9.2\lib\net20\xunit.dll</HintPath>
     </Reference>
     <Reference Include="xunit.extensions">
-      <HintPath>..\..\packages\xunit.extensions.1.9.2\lib\net20\xunit.extensions.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\xunit.extensions.1.9.2\lib\net20\xunit.extensions.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -50,15 +50,15 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ClientRuntime\ClientRuntime.csproj">
+    <ProjectReference Include="..\Microsoft.Rest.ClientRuntime\ClientRuntime.csproj">
       <Project>{7f524559-93f9-4f3f-9e2c-af41a0c2e6f4}</Project>
       <Name>ClientRuntime</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ClientRuntime.Etw\ClientRuntime.Etw.csproj">
+    <ProjectReference Include="..\Microsoft.Rest.ClientRuntime.Etw\ClientRuntime.Etw.csproj">
       <Project>{50b0a8ce-d290-4eb7-8c6c-16eaab75225e}</Project>
       <Name>ClientRuntime.Etw</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ClientRuntime.Log4Net\ClientRuntime.Log4Net.csproj">
+    <ProjectReference Include="..\Microsoft.Rest.ClientRuntime.Log4Net\ClientRuntime.Log4Net.csproj">
       <Project>{2efd6648-39b4-476a-b302-8bc236f5f1b8}</Project>
       <Name>ClientRuntime.Log4Net</Name>
     </ProjectReference>
@@ -72,6 +72,6 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\xunit.runner.visualstudio.0.99.9-build1021\build\net20\xunit.runner.visualstudio.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\xunit.runner.visualstudio.0.99.9-build1021\build\net20\xunit.runner.visualstudio.props'))" />
+    <Error Condition="!Exists('$(SolutionDir)packages\xunit.runner.visualstudio.0.99.9-build1021\build\net20\xunit.runner.visualstudio.props')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)packages\xunit.runner.visualstudio.0.99.9-build1021\build\net20\xunit.runner.visualstudio.props'))" />
   </Target>
 </Project>
