--- a/ClientRuntimes/CSharp/ClientRuntime/ClientRuntime.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime/ClientRuntime.csproj
@@ -19,10 +19,11 @@
     <Compile Include="BasicAuthenticationCredentials.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="HttpExtensions.cs" />
-    <Compile Include="PolymorphicDeserializeJsonConverter.cs" />
+    <Compile Include="JsonSerialization\PolymorphicDeserializeJsonConverter.cs" />
+    <Compile Include="JsonSerialization\PolymorphicSerializeJsonConverter.cs" />
+    <Compile Include="JsonSerialization\ReadOnlyJsonContractResolver.cs" />
     <Compile Include="TokenCredentials.cs" />
     <Compile Include="TransientFaultHandling\RetryCondition.cs" />
-    <Compile Include="PolymorphicSerializeJsonConverter.cs" />
     <Compile Include="TypeConversion.cs" />
     <Compile Include="ILazyCollection.cs" />
     <Compile Include="LazyDictionary.cs" />
