--- a/ClientRuntimes/CSharp/ClientRuntime.Tests/packages.config
+++ b/ClientRuntimes/CSharp/ClientRuntime.Tests/packages.config
@@ -5,7 +5,11 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable-net403+win+wpa81" />
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="portable-net403+win+wpa81" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="portable-net403+win+wpa81" />
-  <package id="xunit" version="1.9.2" targetFramework="portable-net403+win+wpa81" />
-  <package id="xunit.extensions" version="1.9.2" targetFramework="portable-net403+win+wpa81" />
-  <package id="xunit.runner.visualstudio" version="0.99.9-build1021" targetFramework="portable-net403+win+wpa81" />
+  <package id="xunit" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.assert" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.core" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.extensions" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.0.0" targetFramework="net45" />
 </packages>
