--- a/ClientRuntimes/CSharp/ClientRuntime.Tracing.Tests/packages.config
+++ b/ClientRuntimes/CSharp/ClientRuntime.Tracing.Tests/packages.config
@@ -2,7 +2,11 @@
 <packages>
   <package id="Microsoft.Diagnostics.Tracing.TraceEvent" version="1.0.11" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net45" />
-  <package id="xunit" version="1.9.2" targetFramework="net45" />
-  <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="0.99.9-build1021" targetFramework="net45" />
+  <package id="xunit" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.assert" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.core" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.extensions" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.0.0" targetFramework="net45" />
 </packages>
